Fix CORS allowed origins for Vercel deployments